--- a/front/css/1일차/2_test예제.html
+++ b/front/css/1일차/2_test예제.html
@@ -7,8 +7,8 @@
 	<title>박스 호버 예제</title>
 	<style>
 		*{ padding: 0; margin: 0;}
-		ul{list-style: none;}
-		a{text-decoration: none; color: #000;}
+		ul{list-style: none;} /* ul태그는 block요소임*/
+		a{text-decoration: none; color: #000;} /*a태그는 inline요소임*/
 		.menu-item{ 
 			width: 300px; height: 50px;
 		}
