--- a/front/css/2일차/NAVER2.html
+++ b/front/css/2일차/NAVER2.html
@@ -235,27 +235,6 @@
 			height: 400px; float: right;
 			width: 350px; background-color: black;
 		}
-		.box-body .box-body-left1{
-			height: 135px; position: relative;
-		}
-		.box-body .box-body-left1 .frame{
-			height: 135px; width: 750px;
-		}
-		.box-body .line{
-			background-color: #000; position: absolute; opacity: .07;
-		}
-		.box-body .line-top{
-			height: 1px; left: 0; right: 0; top:0;  
-		}
-		.box-body .line-bottom{
-			height: 1px; left: 0; right: 0; bottom:0; 
-		}
-		.box-body .line-left{
-			width: 1px; left: 0; bottom: 0; top:0; 
-		}
-		.box-body .line-right{
-			width: 1px; right: 0; bottom: 0; top:0; 
-		}
 	</style>
 </head>
 <body>
@@ -378,15 +357,15 @@
 			<div class="inner-container">
 				<div class="box-body clearfix">
 					<div class="box-body-left">
-						<div class="box-body-left1">
-							<iframe src="add1.html" frameborder="0" class="frame"></iframe>
-							<span class="line-top"></span>
-							<span class="line-bottom"></span>
-							<span class="line-left"></span>
-							<span class="line-right"></span>
+						<div class="left-first-box">
+							<div class="first-box" style="position: relative;">
+								<div class="second-box" style="height: 135px;">
+									<div style="width: 750px; height: 135px; margin: 0px auto; position: relative;">
+									 <iframe src="" frameborder="0"></iframe>
+									</div>
+								</div>
+							</div>
 						</div>
-							
-						
 					</div>
 					<div class="box-body-right"></div>
 				</div>
