--- a/front/css/2일차/dsadsa.html
+++ b/front/css/2일차/dsadsa.html
@@ -4,33 +4,36 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>overflow 예제</title>
 	<style>
-		.box1{
-			padding-top: 4px;
+		/* 
+		- overflow 속성
+		  - 컨텐츠가 요소보다 클 경우 컨텐츠를 보여줄지 말지를 결정하는 속성
+		  - visible : 기본값으로 넘어가는 컨텐츠를 보여줌
+			- hidden : 넘어가는 속성을 보이지 않게 함
+			- scroll : 스크롤이 생겨서 넘어가면 스크롤을 통해 넘어간 부분을 확인
+			- auto : 크지 않으면 visible, 크면 scroll로 동작
+		*/
+		.box{ 
+			width: 300px; height: 300px; background: red;
+			overflow: scroll;
+			/* IE, Edge, Firefox */
+			-ms-overflow-style: none; /* IE, Edge*/
+			scrollbar-width: none; /* Firefox */
 		}
-		.box2{
-			padding: 18px 0;
-			border-bottom: 1px solid #e4e8eb;
+		/* Chrome, Safari, Opera */
+		.box::-webkit-scrollbar{
+			display: none;
 		}
-		.box2-1{
-			float:left; width: 364px; height: 180px; background-color: red;
+		
+		.inner-box{
+			width: 200px; height: 400px; background: gray;
 		}
-		.box2-2{
-			float: left; margin-left: 22px; width: 364px ;height: 180px ;background-color: blue;
-		}
-		.box2::after{
-			display: block; content: ''; clear: both;
-		}
-
 	</style>
 </head>
 <body>
-	<div class="box1">
-		<div class="box2">
-			<div class="box2-1"></div>
-			<div class="box2-2"></div>
-		</div>
+	<div class="box">
+		<div class="inner-box">1</div>
 	</div>
 	
 </body>
