--- a/front/JS/test.html
+++ b/front/JS/test.html
@@ -16,7 +16,7 @@
 			background-color: blanchedalmond;
 		}
 		.ade{
-			width: 300px;
+			width: 80%;
 		}
 		table, th, td{
 			border: 1px solid black;
@@ -54,7 +54,7 @@
 			<tr>
 				<td>9</td>
 				<td class="ade">공지사항 제목 9</td>
-				<td><input type="button" value="바로가기"></td>
+				<td><a href="#" style="text-decoration: none; font-size: 14px; padding: 1px 6px 1px 5px; border: 1px solid black; color: black; background-color: azure;">바로가기</a></td>
 				<td>user01</td>
 				<td>2021-03-29</td>
 				<td>34</td>
@@ -62,7 +62,7 @@
 			<tr>
 				<td>9</td>
 				<td class="ade">공지사항 제목 9</td>
-				<td><input type="button" value="바로가기"></td>
+				<td><a href="#" style="text-decoration: none; font-size: 14px; padding: 1px 6px 1px 5px; border: 1px solid black; color: black; background-color: azure;">바로가기</a></td>
 				<td>user01</td>
 				<td>2021-03-29</td>
 				<td>34</td>
@@ -70,7 +70,7 @@
 			<tr>
 				<td>9</td>
 				<td class="ade">공지사항 제목 9</td>
-				<td><input type="button" value="바로가기"></td>
+				<td><a href="#" style="text-decoration: none; font-size: 14px; padding: 1px 6px 1px 5px; border: 1px solid black; color: black; background-color: azure;">바로가기</a></td>
 				<td>user01</td>
 				<td>2021-03-29</td>
 				<td>34</td>
@@ -78,7 +78,7 @@
 			<tr>
 				<td>9</td>
 				<td class="ade">공지사항 제목 9</td>
-				<td><input type="button" value="바로가기"></td>
+				<td><a href="#" style="text-decoration: none; font-size: 14px; padding: 1px 6px 1px 5px; border: 1px solid black; color: black; background-color: azure;">바로가기</a></td>
 				<td>user01</td>
 				<td>2021-03-29</td>
 				<td>34</td>
@@ -86,7 +86,7 @@
 			<tr>
 				<td>9</td>
 				<td class="ade">공지사항 제목 9</td>
-				<td><input type="button" value="바로가기"></td>
+				<td><a href="#" style="text-decoration: none; font-size: 14px; padding: 1px 6px 1px 5px; border: 1px solid black; color: black; background-color: azure;">바로가기</a></td>
 				<td>user01</td>
 				<td>2021-03-29</td>
 				<td>34</td>
